--- a/Source/ChargifyDirectExample.MVC4/packages.config
+++ b/Source/ChargifyDirectExample.MVC4/packages.config
@@ -12,5 +12,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="NotFoundMvc" version="1.0.0" targetFramework="net45" />
+  <package id="RestSharp" version="104.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net40" />
 </packages>
