--- a/Source/ChargifyDirectExample.MVC4/Web.config
+++ b/Source/ChargifyDirectExample.MVC4/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="chargify" type="Chargify2.Configuration.ChargifyAccountRetrieverSection" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
