--- a/Source/ChargifyDirectExample.MVC4/packages.config
+++ b/Source/ChargifyDirectExample.MVC4/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="chargify2" version="1.0.0.9" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
