--- a/Source/ChargifyDirectExample.MVC4/ChargifyDirectExample.MVC4.csproj
+++ b/Source/ChargifyDirectExample.MVC4/ChargifyDirectExample.MVC4.csproj
@@ -144,6 +144,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
