--- a/Source/ChargifyDirectExample.MVC4/Web.config
+++ b/Source/ChargifyDirectExample.MVC4/Web.config
@@ -16,7 +16,7 @@
     <add key="Chargify.v2.apiKey" value="" />
     <add key="Chargify.v2.secret" value="" />
     <add key="Chargify.v2.apiPassword" value="" />
-    <add key="ComponentID" value="17729" />
+    <add key="ComponentID" value="" />  <!-- The chargify of a widget type quantity component to be used on signup -->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
