--- a/Source/ChargifyDirectExample.MVC4/ChargifyDirectExample.MVC.csproj
+++ b/Source/ChargifyDirectExample.MVC4/ChargifyDirectExample.MVC.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChargifyDirectExample.MVC4</RootNamespace>
-    <AssemblyName>ChargifyDirectExample.MVC4</AssemblyName>
+    <RootNamespace>ChargifyDirectExample.MVC</RootNamespace>
+    <AssemblyName>ChargifyDirectExample.MVC</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -29,6 +29,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
