--- a/Source/ChargifyDirectExample.MVC/Web.config
+++ b/Source/ChargifyDirectExample.MVC/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <configSections>
     <section name="chargify" type="Chargify2.Configuration.ChargifyAccountRetrieverSection" />
-  </configSections>
+  <section name="chargify2" type="Chargify2.Configuration.ChargifyAccountRetrieverSection" /></configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -63,4 +63,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<chargify2 defaultAccount="YourAccount">
+    <accounts>
+      <add name="YourAccount" apiKey="apikey_here" apiPassword="password_here" secret="secret_here" />
+    </accounts>
+  </chargify2></configuration>
