--- a/Source/ChargifyDirectExample.MVC/packages.config
+++ b/Source/ChargifyDirectExample.MVC/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="chargify2" version="1.0.5630.19705" targetFramework="net45" />
+  <package id="chargify2" version="1.0.5630.19667" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net4" userInstalled="true" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net4" userInstalled="true" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net4" userInstalled="true" />
@@ -14,6 +14,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net4" userInstalled="true" />
   <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" userInstalled="true" />
   <package id="NotFoundMvc" version="1.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="RestSharp" version="104.1" targetFramework="net45" userInstalled="true" />
+  <package id="RestSharp" version="105.1.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net4" userInstalled="true" />
 </packages>
