--- a/Source/ChargifyDirectExample.MVC/packages.config
+++ b/Source/ChargifyDirectExample.MVC/packages.config
@@ -1,19 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.1" targetFramework="net45" />
   <package id="chargify2" version="1.0.5630.19667" targetFramework="net45" />
-  <package id="jQuery" version="1.9.1" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net4" userInstalled="true" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net4" userInstalled="true" />
+  <package id="jQuery" version="2.1.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net4" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" userInstalled="true" />
-  <package id="NotFoundMvc" version="1.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="RestSharp" version="105.1.0" targetFramework="net45" />
-  <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net4" userInstalled="true" />
+  <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
 </packages>
